--- a/bug-report.html
+++ b/bug-report.html
@@ -30,6 +30,7 @@
         </p>
     </form>
 
+    <script src="js/smtp.js"></script>
     <script src="js/jquery-2.1.0.min.js"></script>
     <script src="js/transporters/pivotal-transporter.js"></script>
     <script src="js/bug-reporter.js"></script>
